2016-09-05  Tom 7  <Tom@RIVERCITY>

        * player.cc: Solutions in the player file are now sorted
          in numeric order (by level MD5), not by semi-numeric
          hash function.

        * solution.cc: Totally redid how solutions are stored in
          memory, making it possible to fix the long-standing bug
          where a player could only have one non-bookmark solution.
          (Thanks, noname and almost everyone!)

        * loadlevel.cc: Disabled the standalone solution manager.
          This legacy thing has been undocumented for years. The
          bookmark manager (press 'b') does more stuff and works
          correctly. (If it lacks a feature that you miss, let me
          know!)

2016-09-03  Tom 7  <Tom@RIVERCITY>

        * rle.cc: Due to compression, player files and (newly saved)
          levels will be about 13% smaller. The format is backward-
          compatible.

        * selector.h: Also make color of the selector bar match on
          all platforms.

        * player.cc: Escape no longer supports the old binary player
          file format circa 2007. You could use one of the legacy
          Escape binaries from the web site to convert this to the text
          format. This should affect almost nobody!

        * escape.nsi: Escape now installs by default in c:\escape,
          since newer versions of Windows don't let programs write into
          "Program Files." Escape needs to write here to download
          levels and upgrade itself.

        * sdlutil.cc: Fixed some cosmetic bugs relating to color channel
          order on platforms like macOS (visible on main menu, editor
          background, zoomed-out levels, etc.). Probably-imperceptible
          improvements to zoomed-out graphics on all platforms.

2016-08-30  Tom 7  <Tom@RIVERCITY>

        * level.cc: Escape can no longer load DOS-version level files.
          It's been 15 years! You could import them with one of the